bunch more testing for loop unrolling and peeked assembly